# advent-of-code

./: .gitignore
2024/c++/: .clang-format  CMakeLists.txt  CMakePresets.json
2024/c++/src/: CMakeLists.txt
2024/c++/src/day1/: day1.cpp  main.cpp
2024/c++/src/day2/: day2.cpp
2024/c++/src/day3/: day3.cpp
2024/c++/src/day4/: day4.cpp  mat_test.cpp
2024/c++/src/day5/: day5.cpp
2024/c++/src/day6/: day6.cpp
2024/c++/src/day7/: day7.cpp
2024/c++/src/day8/: day8.cpp
2024/c++/src/day9/: day9.cpp
2024/c++/src/tools/: assert.cpp
2024/c++/src/utils/: CMakeLists.txt  assert.cpp  core.cpp  pretty.cpp  strings.cpp  utils.cpp
2024/rust/: Cargo.toml
2024/rust/src/day1/: day1.rs
2024/rust/src/utils/: mod.rs
2025/haskell/: 1.hs  2.hs  3.hs
2025/rust/: Cargo.toml
2025/rust/src/: 1.rs
2025/template-hell/: CMakeLists.txt
2025/template-hell/src/: 2.cpp  3.cpp  CMakeLists.txt  util.hpp
2025/zig/: build.zig  build.zig.zon
2025/zig/src/: 1.zig  2.zig  3.zig  4.zig  5.zig
