add_subdirectory(utils)

link_libraries(utils)

add_executable(day1 day1/day1.cpp)
add_executable(day2 day2/day2.cpp)
add_executable(day3 day3/day3.cpp)
add_executable(day4 day4/day4.cpp)
add_executable(day5 day5/day5.cpp)
add_executable(day6 day6/day6.cpp)
add_executable(day7 day7/day7.cpp)
add_executable(day8 day8/day8.cpp)
add_executable(day9 day9/day9.cpp)
